added assets, edited pages

--- a/mini-proj1/about.html
+++ b/mini-proj1/about.html
@@ -28,10 +28,11 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link disabled" aria-current="page" href="./about.html"><span class="ref-nav">About Us</span></a>
+                    <a class="nav-link" href="./home.html"><span class="ref-nav">Home</span></a>
                   </li>
+
                   <li class="nav-item">
-                    <a class="nav-link" href="./events.html"><span class="ref-nav">Events</span></a>
+                    <a class="nav-link disabled" aria-current="page" href="./about.html"><span class="ref-nav">About Us</span></a>
                   </li>
                   
                   <li class="nav-item dropdown">
@@ -187,7 +188,7 @@
 
             <ul class="list-unstyled mb-0">
               <li>
-                <a href="./events.html" class="text-success"><span><i class="fas fa-calendar-check"></i> Events</span></a>
+                <a href="./home.html" class="text-success"><span><i class="fas fa-home"></i> Home</span></a>
               </li>
               <li class="dropdown text-success">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
