--- a/mini-proj1/christianity212.html
+++ b/mini-proj1/christianity212.html
@@ -28,10 +28,11 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="./about.html"><span class="ref-nav">About Us</span></a>
+                    <a class="nav-link" href="./home.html"><span class="ref-nav">Home</span></a>
                   </li>
+
                   <li class="nav-item">
-                    <a class="nav-link" href="./events.html"><span class="ref-nav">Events</span></a>
+                    <a class="nav-link" href="./about.html"><span class="ref-nav">About Us</span></a>
                   </li>
                   
                   <li class="nav-item dropdown">
@@ -39,7 +40,7 @@
                       <span class="ref-nav">Teaching</span>
                     </a>
                     <ul class="dropdown-menu">
-                      <li><a class="dropdown-item disabled fw-bold" href="./christianity212.html"><span class="droppers">Christianity 212</span></a></li>
+                      <li><a class="dropdown-item disabled fw-bold" aria-current="page" href="./christianity212.html"><span class="droppers">Christianity 212</span></a></li>
                       <li><a class="dropdown-item" href="./salvation.html"><span class="droppers">Order of Salvation</span></a></li>
                       <li><a class="dropdown-item" href="./five-solas.html"><span class="droppers">The 5 Solas</span></a></li>
                       <li><a class="dropdown-item" href="./systematic-theology.html"><span class="droppers">Systematic Theology</span></a></li>
@@ -60,6 +61,66 @@
             </div>
           </nav>
     </header>
+
+    <section class="container pt-5">
+      <div class="row">
+        <div class="col-lg-9">
+          <h1>Christianity 212: What is Biblical Christianity</h1>
+          <figure>
+            <figcaption class="blockquote-footer pt-2">
+              From GotQuestions <cite title="Source Title">GotQuestions.org</cite>
+            </figcaption>
+          </figure>
+
+          <div class="ms-2">
+          <p>Biblical Christianity relies on the Bible to understand true faith. It is counter to cultural Christianity, which does not truly adhere to the faith or the Bible. Biblical Christianity bases its doctrine on the Bible alone. Cultural Christianity may be based on family background, personal experience, country of residence, or social environment&mdash;what the Bible says is secondary. Cultural Christianity produces nominal believers who label themselves as Christians but who allow culture to define their convictions. Biblical Christianity produces true believers who use God’s Word to understand salvation and what it means to be a Christian.</p>
+
+          <p class="display-6">Biblical Christianity adheres to the fundamentals of the Christian faith, as found in the Bible:</p>
+            <ol>
+              <li>The Triunity of God: the one God exists eternally in three Persons.</li>
+              <li>Jesus Christ is fully man and fully God. His death was the substitutionary sacrifice for sinners, and He rose again bodily.</li> 
+              <li>Salvation is by grace alone through faith alone in Christ alone.</li>
+              <li>The sixty-six books of the Bible are God’s Word, inspired, inerrant, and sufficient for living a godly life.</li>
+              <li>Jesus Christ is coming again to judge sin and rule the world.</li> 
+            </ol>
+            
+          <p class="display-6">Any departure from these points represents a departure from biblical Christianity.</p>
+
+          <p>The words we have in both the Old and New Testaments are described as God’s very words (Job 23:12; Psalm 119: 9; Isaiah 55:11; John 6:63; 2 Timothy 3:16&ndash;17). The apostle Paul commends the believers in Thessalonica for accepting what he shared as God’s words to them: “And we also thank God continually because, when you received the word of God, which you heard from us, you accepted it not as a human word, but as it actually is, the word of God, which is indeed at work in you who believe” (1 Thessalonians 2:13). Jesus Himself exemplified the importance of God’s Word. When He was tempted, He relied on Scripture to defeat Satan, saying, “It is written: ‘Man shall not live on bread alone, but on every word that comes from the mouth of God’” (Matthew 4:4). This is the example the early Christians followed in their faith.</p>
+
+          <p>In the days of the early church, there was no such thing as cultural Christianity. Believers were in many ways counter-cultural, transformed by Christ’s resurrection and the Holy Spirit. They studied the Scriptures (Acts 17:11). They were biblical Christians. Whereas cultural Christianity is comfortable and focused on cultural issues, biblical Christianity produces believers who are willing to die for their faith based on what the Bible says. Biblical Christianity is historic Christianity.</p>
+
+          <p>A true Christian has received Jesus Christ as personal Lord and Savior (John 1:12). He believes that Christ has paid the penalty for his sin (2 Corinthians 5:21). He trusts in Jesus’ resurrection. Jesus said that anyone who wishes to become His disciple must “deny himself, take up his cross daily, and follow me” (Luke 9:23). A biblical Christian knows what that looks like because he bases his life on God’s Word, not on cultural norms.</p>
+
+          <p>The Protestant Reformation brought a revival of biblical Christianity. For centuries the Roman Catholic Church had made its traditions superior in authority to the Bible, which resulted in many practices contrary to the Bible. <em>Sola scriptura</em> was the cry of the Reformers. <em><a href="./five-solas.html#sola-script" class="ref-nav">Sola scriptura</a></em> means that Scripture alone is authoritative for the faith and practice of the Christian. The Bible tells us that God’s Word is true, God-breathed and complete (2 Timothy 3:16), and we are warned not to go beyond what is written (1 Corinthians 4:6). The Reformers were calling Christians back to biblical Christianity.</p>
+
+          <p>Today, true Christians are still rightly dividing the word of truth (2 Timothy 2:15) and calling people to biblical Christianity. In a world where people want to redefine everything, we must hold firm to the truth that God’s Word endures forever (Isaiah 40:8; Mark 13:31). Our faith should be based firmly on what He has revealed to us in His Word. Christianity that is not biblical is not true Christianity.</p>
+        </div>
+        </div>
+
+        <div class="col-lg-3 d-flex justify-content-center text-center">
+          <div class="container">
+            <div class="row">
+              <div class="my-5">
+              <a href="https://invle.co/clejo67" target="_blank"><img src="../assets/img/eyeglass-ad1.png" alt="eyeglass-ad-banner"></a>
+              </div>
+            <div class="mb-5">
+              <a href="https://invle.co/clejo5a" target="_blank"><img src="../assets/img/shopee-banner1.jpg" alt="shopee-ad-banner"></a>
+            </div>
+            <div class="mb-5">
+              <a href="https://invol.co/clejo3u" target="_blank"><img src="../assets/img/lazada-banner1.jpg" alt="lazada-ad-banner"></a>
+            </div>
+            <div class="mb-5">
+              <a href="https://invle.co/clejo67" target="_blank"><img src="../assets/img/eyeglass-ad2.png" alt="eyeglass-ad-banner"></a>
+            </div>
+            <div class="mb-5">
+              <a href="https://invle.co/clejo67" target="_blank"><img src="../assets/img/eyeglass-ad3.png" alt="eyeglass-ad-banner"></a>
+            </div>
+          </div>
+        </div>
+        </div>
+      </div>
+  </section>
 
   <footer class="bg-light text-center text-dark">
     <div class="container p-4">
@@ -121,7 +182,7 @@
 
             <ul class="list-unstyled mb-0">
               <li>
-                <a href="./events.html" class="text-success"><span><i class="fas fa-calendar-check"></i> Events</span></a>
+                <a href="./home.html" class="text-success"><span><i class="fas fa-home"></i> Home</span></a>
               </li>
               <li class="dropdown text-success">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
