--- a/mini-proj1/privacy-policy.html
+++ b/mini-proj1/privacy-policy.html
@@ -31,10 +31,11 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="./about.html"><span class="ref-nav">About Us</span></a>
+                    <a class="nav-link" href="./home.html"><span class="ref-nav">Home</span></a>
                   </li>
+
                   <li class="nav-item">
-                    <a class="nav-link" href="./events.html"><span class="ref-nav">Events</span></a>
+                    <a class="nav-link" href="./about.html"><span class="ref-nav">About Us</span></a>
                   </li>
                   
                   <li class="nav-item dropdown">
