--- a/mini-proj1/contactus.html
+++ b/mini-proj1/contactus.html
@@ -20,12 +20,12 @@
               <span class="refroot-title">Semper Radicata</span>
             </a>
 
-            <div>
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="./home.html"><span class="text-success me-2"><i class="ref-nav fas fa-home"></i> Home</span></a>
-                  </li>
-                </ul>
+              <ul class="navbar-nav me-auto mb-2">
+                <li class="nav-item">
+                  <a class="nav-link" aria-current="page" href="./home.html"><span class="ref-nav fas fa-home"></span></a>
+                </li>
+              </ul>
+          </div>
       </nav>
 
     <div class="header-content2 d-flex justify-content-center align-items-center">
@@ -112,7 +112,7 @@
 
             <ul class="list-unstyled mb-0">
               <li>
-                <a href="./events.html" class="text-success"><span><i class="fas fa-calendar-check"></i> Events</span></a>
+                <a href="./home.html" class="text-success"><span><i class="fas fa-home"></i> Home</span></a>
               </li>
               <li class="dropdown text-success">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
