--- a/mini-proj1/home.html
+++ b/mini-proj1/home.html
@@ -28,10 +28,7 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="./about.html"><span class="ref-nav">About Us</span></a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./events.html"><span class="ref-nav">Events</span></a>
+                    <a class="nav-link" href="./about.html"><span class="ref-nav">About Us</span></a>
                   </li>
                   
                   <li class="nav-item dropdown">
@@ -65,9 +62,9 @@
         <div class="text-center h-100">
           <div class="text-light">
             <h1 class="fst-italic display-2 px-3 mb-3 d-flex justify-content-center">ALWAYS ROOTED & REFORMING</h1>
-              <h4 class="fst-italic px-3 d-flex justify-content-center">Sola Scriptura / Sola Gratia / Sola Fide <br>Solus Christus / Soli Deo Gloria</h4>
+              <h4 class="fst-italic px-3 d-flex justify-content-center">Sola Gratia / Sola Fide / Solus Christus <br>Sola Scriptura / Soli Deo Gloria</h4>
             <div class="mb-3 d-flex justify-content-center">
-            <a class="btn btn-outline-success btn-lg" href="./christianity212.html" role="button"><b>You've Got to Read More</b></a>
+            <a class="btn btn-outline-success btn-lg" href="./five-solas.html" role="button"><b>You've Got to Read More</b></a>
             </div>
           </div>
         </div>
@@ -206,7 +203,7 @@
 
             <ul class="list-unstyled mb-0">
               <li>
-                <a href="./events.html" class="text-success"><span><i class="fas fa-calendar-check"></i> Events</span></a>
+                <a href="./about.html" class="text-success"><span><i class="fas fa-check-double"></i> About Us</span></a>
               </li>
               <li class="dropdown text-success">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
