--- a/mini-proj1/salvation.html
+++ b/mini-proj1/salvation.html
@@ -30,10 +30,11 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="./about.html"><span class="ref-nav">About Us</span></a>
+                    <a class="nav-link" href="./home.html"><span class="ref-nav">Home</span></a>
                   </li>
+
                   <li class="nav-item">
-                    <a class="nav-link" href="./events.html"><span class="ref-nav">Events</span></a>
+                    <a class="nav-link" href="./about.html"><span class="ref-nav">About Us</span></a>
                   </li>
                   
                   <li class="nav-item dropdown">
@@ -42,7 +43,7 @@
                     </a>
                     <ul class="dropdown-menu">
                       <li><a class="dropdown-item" href="./christianity212.html"><span class="droppers">Christianity 212</span></a></li>
-                      <li><a class="dropdown-item disabled fw-bold" href="./salvation.html"><span class="droppers">Order of Salvation</span></a></li>
+                      <li><a class="dropdown-item disabled fw-bold" aria-current="page" href="./salvation.html"><span class="droppers">Order of Salvation</span></a></li>
                       <li><a class="dropdown-item" href="./five-solas.html"><span class="droppers">The 5 Solas</span></a></li>
                       <li><a class="dropdown-item" href="./systematic-theology.html"><span class="droppers">Systematic Theology</span></a></li>
                     </ul>
@@ -65,18 +66,20 @@
 
     <section class="container pt-5">
       <div class="row">
-        <div class="col-lg-10">
+        <div class="col-lg-9">
           <h1>The Order of Salvation</h1>
           <figure>
             <figcaption class="blockquote-footer pt-2">
-              Fron the study notes of <cite title="Source Title">Stuart Olyott</cite>
+              From the study notes of <cite title="Source Title">Stuart Olyott</cite>
             </figcaption>
           </figure>
-          <p>Christ died to save those whom His Father had given Him.
+          <div class="ms-2">
+          <p>Christ died to save those whom His Father had given Him.</p>
           <p>But how are they brought into the actual enjoyment/experience/possession of salvation?</p>
           <p>The Scriptures teach that God works in their lives, doing certain things in a certain order.
             <br>Referring to Romans 8:28-30, the very first in the order is:</p>
-          <h2 class="ref-nav">Calling</h2>
+          </div>
+          <h2>Calling</h2>
             <div class="ms-2">
             <h4>The Outward Call</h4>
               <ul>
@@ -160,14 +163,27 @@
                     </ul>
                   </div>
             </div>
-
-
           </div>
 
-          <div class="col-lg-2">
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates labore minima deserunt veniam, cum tempora omnis obcaecati corporis eaque neque.
-            </p>
+          <div class="col-lg-3 d-flex justify-content-center text-center">
+            <div class="container">
+              <div class="row">
+                <div class="my-5">
+                <a href="https://invle.co/clejo67" target="_blank"><img src="../assets/img/eyeglass-ad1.png" alt="eyeglass-ad-banner"></a>
+                </div>
+              <div class="mb-5">
+                <a href="https://invle.co/clejo5a" target="_blank"><img src="../assets/img/shopee-banner1.jpg" alt="shopee-ad-banner"></a>
+              </div>
+              <div class="mb-5">
+                <a href="https://invol.co/clejo3u" target="_blank"><img src="../assets/img/lazada-banner1.jpg" alt="lazada-ad-banner"></a>
+              </div>
+              <div class="mb-5">
+                <a href="https://invle.co/clejo67" target="_blank"><img src="../assets/img/eyeglass-ad2.png" alt="eyeglass-ad-banner"></a>
+              </div>
+              <div class="mb-5">
+                <a href="https://invle.co/clejo67" target="_blank"><img src="../assets/img/eyeglass-ad3.png" alt="eyeglass-ad-banner"></a>
+              </div>
+            </div>
           </div>
         </div>
     </section>
@@ -232,7 +248,7 @@
 
             <ul class="list-unstyled mb-0">
               <li>
-                <a href="./events.html" class="text-success"><span><i class="fas fa-calendar-check"></i> Events</span></a>
+                <a href="./home.html" class="text-success"><span><i class="fas fa-calendar-check"></i> Home</span></a>
               </li>
               <li class="dropdown text-success">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
