--- a/mini-proj1/home.html
+++ b/mini-proj1/home.html
@@ -106,7 +106,7 @@
       </h3>
              <h4>We say that <span class="fst-italic ref-nav">"it will set us free!"</h4>
       <p class="display-5 pb-3">What is the sense of that statement?</p>
-      <p class="display-6">Come! Let's study its origin and know how the Truth really means in the life of True Christians.</p>
+      <p class="display-6">Come! Let's study its origin and know how the Truth really means in the lives of True Christians.</p>
       <div class="mb-3 d-flex justify-content-center">
         <a class="btn btn-outline-success btn-lg" href="./christianity212.html" role="button"><b>Start Here</b></a>
         </div>
