added some p lines

--- a/mini-proj1/salvation.html
+++ b/mini-proj1/salvation.html
@@ -162,6 +162,12 @@
                       <li>It would never happen - if it were not for regeneration.</li>
                     </ul>
                   </div>
+
+                  <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+                    <p class="ms-2 nav-items">
+                      ***<i>If you want to study the full discourse of the Order of Salvation, download</i> <a href="https://mega.nz/file/j6p30DYK#oUTvTQiBHNfCbsP3HFWHI4bclh1XJ5UYioDI3ckGg7o" target="_blank" class="ref-nav fs-5">HERE</a>.)
+                    </p>
+                  </div>
             </div>
           </div>
 
