--- a/exercise8.html
+++ b/exercise8.html
@@ -24,7 +24,10 @@
       <li>CSS Exercise 1-<a href="https://codenimus.github.io/kodego-demo/cssexercise1">HTML Template</a></li>
       <li>CSS Exercise 2-<a href="https://codenimus.github.io/kodego-demo/boxmodel1">Box Model</a></li>
       <li>CSS Exercise 3-<a href="https://codenimus.github.io/kodego-demo/positioningexercise1">Positioning Exercise</a></li>
-  </ul>
+    </ul>
+      <ul>
+        <li>Mini Project 1-<a href="https://codenimus.github.io/kodego-demo/mini-proj1/home.html">Reformed Christian Website</a></li>
+      </ul>
   </section>
       <hr>
   <p align="center">
