--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
                 <li>CSS Exercise 3-<a href="https://codenimus.github.io/kodego-demo/positioningexercise1">Positioning Exercise</a></li>
                 <li>CSS Exercise 4-<a href="https://codenimus.github.io/kodego-demo/mobile">Flexbox and Responsive Design</a></li>
             </ul>
+            <ul>
+                <li>Mini Project 1-<a href="https://codenimus.github.io/kodego-demo/mini-proj1/home.html" target="_blank">Reformed Christian Website</a></li>
+            </ul>
         </p>
     </body>
 </html>
