--- a/mini-proj1/five-solas.html
+++ b/mini-proj1/five-solas.html
@@ -99,6 +99,10 @@
       
           <p class="ms-2">The five solas state that Christians are saved by grace alone, through faith alone,
             in Christ alone, as revealed by Scripture alone, to the glory of God alone.</p>
+
+          <div class="d-flex justify-content-center align-items-center my-4">
+            <iframe width="980" height="551" src="https://www.youtube.com/embed/-Cyuq3mGQhw" title="The Five Solas of the Reformation" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
       
           <h3><i>Sola Gratia</i></h3>
           <div class="ms-2">
