--- a/mini-proj1/systematic-theology.html
+++ b/mini-proj1/systematic-theology.html
@@ -114,7 +114,7 @@
           <div class="d-flex justify-content-center align-items-center my-4">
             <iframe width="735" height="551" src="https://www.youtube.com/embed/bIRbcmVC1Q0" title="What Is Theology?: Foundations - An Overview of Systematic Theology with R.C. Sproul" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
-          <p class="d-flex justify-content-center text-center fs-5">
+          <p class="d-flex justify-content-center text-center fs-5 pb-3">
             ***Watch Dr. R. C. Sproul gives a brief introduction to Systematic Theology.
           </p>
 
