--- a/exercise8.html
+++ b/exercise8.html
@@ -21,12 +21,12 @@
         <li>Exercise 9-<a href="https://codenimus.github.io/kodego-demo/exercise9-htmlform" target="iframe_a">HTML Form</a></li>
     </ul>
     <ul>
-      <li>CSS Exercise 1-<a href="https://codenimus.github.io/kodego-demo/cssexercise1">HTML Template</a></li>
-      <li>CSS Exercise 2-<a href="https://codenimus.github.io/kodego-demo/boxmodel1">Box Model</a></li>
-      <li>CSS Exercise 3-<a href="https://codenimus.github.io/kodego-demo/positioningexercise1">Positioning Exercise</a></li>
+      <li>CSS Exercise 1-<a href="https://codenimus.github.io/kodego-demo/cssexercise1" target="iframe_a">HTML Template</a></li>
+      <li>CSS Exercise 2-<a href="https://codenimus.github.io/kodego-demo/boxmodel1" target="iframe_a">Box Model</a></li>
+      <li>CSS Exercise 3-<a href="https://codenimus.github.io/kodego-demo/positioningexercise1" target="iframe_a">Positioning Exercise</a></li>
     </ul>
       <ul>
-        <li>Mini Project 1-<a href="https://codenimus.github.io/kodego-demo/mini-proj1/home.html">Reformed Christian Website</a></li>
+        <li>Mini Project 1-<a href="https://codenimus.github.io/kodego-demo/mini-proj1/home.html" target="iframe_a">Reformed Christian Website</a></li>
       </ul>
   </section>
       <hr>
