added nav-link, added page

--- a/mini-proj1/contactus.html
+++ b/mini-proj1/contactus.html
@@ -44,7 +44,7 @@
 
           <div class="mask px-3 pt-3" style="background-color: rgba(0, 0, 0, 0.4);">
             <div class="form-outline mb-4">
-              <input type="email" id="personal-email" placeholder="email@example.com" class="form-control" />
+              <input type="email" id="personal-email" placeholder="example@email.com" class="form-control" />
               <label class="form-label text-white" for="personal-email">Email address</label>
             </div>
           </div>
