--- a/mini-proj1/christianity212.html
+++ b/mini-proj1/christianity212.html
@@ -51,6 +51,10 @@
                     </ul>
                   </li>
                   
+                  <li class="nav-item">
+                    <a class="nav-link" href="./donate.html"><span class="ref-nav">Donate</span></a>
+                  </li>
+
                   <li class="nav-item-last">
                     <a class="nav-link" href="./contactus.html"><span class="ref-nav-last">Reach Out</span></a>
                   </li>
@@ -93,8 +97,8 @@
           <div class="d-flex justify-content-center align-items-center m-4">
             <iframe width="980" height="551" src="https://www.youtube.com/embed/6N7f8hvUMxg" title="Are You Really A Christian? | Paul Washer" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
-          <p class="d-flex justify-content-center text-center fs-5 pb-3">
-            ***Paul Washer asks, <span class=fst-italic>'Are you really a Christian'?</span>
+          <p class="text-center fs-5 pb-3">
+            Paul Washer asks, <em>'Are you really a Christian?'</em>
           </p>
 
           <p>The words we have in both the Old and New Testaments are described as God’s very words (Job 23:12; Psalm 119: 9; Isaiah 55:11; John 6:63; 2 Timothy 3:16&ndash;17). The apostle Paul commends the believers in Thessalonica for accepting what he shared as God’s words to them: “And we also thank God continually because, when you received the word of God, which you heard from us, you accepted it not as a human word, but as it actually is, the word of God, which is indeed at work in you who believe” (1 Thessalonians 2:13). Jesus Himself exemplified the importance of God’s Word. When He was tempted, He relied on Scripture to defeat Satan, saying, “It is written: ‘Man shall not live on bread alone, but on every word that comes from the mouth of God’” (Matthew 4:4). This is the example the early Christians followed in their faith.</p>
