--- a/mini-proj1/home.html
+++ b/mini-proj1/home.html
@@ -46,6 +46,10 @@
                       <li><a class="dropdown-item" href="./systematic-theology.html"><span class="droppers">Systematic Theology</span></a></li>
                     </ul>
                   </li>
+
+                  <li class="nav-item">
+                    <a class="nav-link" href="./donate.html"><span class="ref-nav">Donate</span></a>
+                  </li>
                   
                   <li class="nav-item-last">
                     <a class="nav-link" href="./contactus.html"><span class="ref-nav-last">Reach Out</span></a>
