--- a/mini-proj1/christianity212.html
+++ b/mini-proj1/christianity212.html
@@ -94,7 +94,7 @@
             
           <p class="display-6">Any departure from these points represents a departure from biblical Christianity.</p>
            
-          <div class="d-flex justify-content-center align-items-center m-4">
+          <div class="d-flex justify-content-center align-items-center m-4 video-background">
             <iframe width="980" height="551" src="https://www.youtube.com/embed/6N7f8hvUMxg" title="Are You Really A Christian? | Paul Washer" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
           <p class="text-center fs-5 pb-3">
