added pages and edited some lines on other pages

--- a/mini-proj1/contactus.html
+++ b/mini-proj1/contactus.html
@@ -121,6 +121,8 @@
                   <li><a class="dropdown-item text-success" href="./salvation.html">Order of Salvation</a></li>
                   <li><a class="dropdown-item text-success" href="./five-solas.html">The 5 Solas</a></li>
                   <li><a class="dropdown-item text-success" href="./systematic-theology.html">Systematic Theology</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item text-success" href="./self-study-downloads.html">FREE Self-Study Ebooks</a></li>
                 </ul>
               </li>
               <li>
