--- a/mini-proj1/privacy-policy.html
+++ b/mini-proj1/privacy-policy.html
@@ -51,6 +51,8 @@
                       <li><a class="dropdown-item" href="./salvation.html"><span class="droppers">Order of Salvation</span></a></li>
                       <li><a class="dropdown-item" href="./five-solas.html"><span class="droppers">The 5 Solas</span></a></li>
                       <li><a class="dropdown-item" href="./systematic-theology.html"><span class="droppers">Systematic Theology</span></a></li>
+                      <li><hr class="dropdown-divider"></li>
+                      <li><a class="dropdown-item" href="./self-study-downloads.html"><span class="droppers">FREE Self-Study Ebooks</span></a></li>
                     </ul>
                   </li>
 
