--- a/mini-proj1/christianity212.html
+++ b/mini-proj1/christianity212.html
@@ -48,6 +48,8 @@
                       <li><a class="dropdown-item" href="./salvation.html"><span class="droppers">Order of Salvation</span></a></li>
                       <li><a class="dropdown-item" href="./five-solas.html"><span class="droppers">The 5 Solas</span></a></li>
                       <li><a class="dropdown-item" href="./systematic-theology.html"><span class="droppers">Systematic Theology</span></a></li>
+                      <li><hr class="dropdown-divider"></li>
+                      <li><a class="dropdown-item" href="./self-study-downloads.html"><span class="droppers">FREE Self-Study Ebooks</span></a></li>
                     </ul>
                   </li>
                   
@@ -202,6 +204,8 @@
                   <li><a class="dropdown-item text-success" href="./salvation.html">Order of Salvation</a></li>
                   <li><a class="dropdown-item text-success" href="./five-solas.html">The 5 Solas</a></li>
                   <li><a class="dropdown-item text-success" href="./systematic-theology.html">Systematic Theology</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item text-success" href="./self-study-downloads.html">FREE Self-Study Ebooks</a></li>
                 </ul>
               </li>
               <li>
