--- a/mini-proj1/donate.html
+++ b/mini-proj1/donate.html
@@ -10,13 +10,13 @@
     <link rel="shortcut icon" href="../assets/img/refavicon.png">
     <link rel="stylesheet" href="../assets/css/refroot-style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <script>
+      $(function() {
+        $('[data-toggle="tooltip"]').tooltip()
+      })
+    </script>
 </head>
 <body>
-  <script>
-    $(function() {
-      $('[data-toggle="tooltip"]').tooltip()
-    })
-  </script>
   <header>
     <nav class="navbar navbar-expand-lg bg-transparent">
       <div class="container">
@@ -516,6 +516,8 @@
                   <li><a class="dropdown-item text-success" href="./salvation.html">Order of Salvation</a></li>
                   <li><a class="dropdown-item text-success" href="./five-solas.html">The 5 Solas</a></li>
                   <li><a class="dropdown-item text-success" href="./systematic-theology.html">Systematic Theology</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item text-success" href="./self-study-downloads.html">FREE Self-Study Ebooks</a></li>
                 </ul>
               </li>
               <li>
