added hrefs, added some assets

--- a/mini-proj1/about.html
+++ b/mini-proj1/about.html
@@ -153,7 +153,7 @@
         <a class="btn btn-outline-success btn-floating m-1" href="https://www.linkedin.com/" target="_blank" role="button">
           <i class="fab fa-linkedin-in"></i></a>
 
-        <a class="btn btn-outline-success btn-floating m-1" href="https://github.com/" target="_blank" role="button">
+        <a class="btn btn-outline-success btn-floating m-1" href="https://github.com/codenimus/" target="_blank" role="button">
           <i class="fab fa-github"></i></a>
       </section>
   
