--- a/mini-proj1/donate.html
+++ b/mini-proj1/donate.html
@@ -22,11 +22,12 @@
       <div class="container">
          <a class="navbar-brand" href="./home.html">
            <img src="../assets/img/refroots-logo.png" alt="Logo" width="60" height="60" class="d-inline-block align-text-center">
+           <span class="refroot-title">Semper Radicata</span>
          </a>
 
            <ul class="navbar-nav me-auto mb-2">
              <li class="nav-item">
-               <a class="nav-link" aria-current="page" href="./home.html"><i class="fas fa-home ref-nav"></i><span class="text-success"> Back to Home</span></a>
+               <a class="nav-link" aria-current="page" href="./home.html"><span class="fas fa-home ref-nav"></span></a>
              </li>
            </ul>
        </div>
@@ -388,7 +389,6 @@
           </div>
           </div>
 
-
             <h6 class="alert alert-success text-center">Donate with Credit/Debit Card</h6>
               <div class="form-group">
                 <label for="username">Full name (on the card)</label>
@@ -460,7 +460,7 @@
         <a class="btn btn-outline-success btn-floating m-1" href="https://www.linkedin.com/" target="_blank" role="button">
           <i class="fab fa-linkedin-in"></i></a>
 
-        <a class="btn btn-outline-success btn-floating m-1" href="https://github.com/" target="_blank" role="button">
+        <a class="btn btn-outline-success btn-floating m-1" href="https://github.com/codenimus/" target="_blank" role="button">
           <i class="fab fa-github"></i></a>
       </section>
   
