--- a/mini-proj1/dre.html
+++ b/mini-proj1/dre.html
@@ -88,7 +88,7 @@
                 </p>
             </div>
             <div class="justify-content-center align-items-center text-center">
-                <a href="#" class="btn btn-success" tabindex="-1" role="button">Study Guide</a>
+                <a href="https://mega.nz/file/eyRVGbJI#YgOYHbRR9LiLNM0OK9Aw-Y0recwyLnICKjdSnbsw854" target="_blank" class="btn btn-success" tabindex="-1" role="button">Download Study Guide</a>
                 </div>
         </div>
       </section>
