--- a/mini-proj1/for.html
+++ b/mini-proj1/for.html
@@ -87,7 +87,7 @@
                 <p class="lead">Forgiveness is one of the greatest needs we have as sinners. Sin has shattered our relationship with God and we need to be reconciled to Him. This study digs deep into our need for forgiveness, the way to forgiveness, encouragements for those seeking it, and marks of having found this gracious gift of God.</p>
             </div>
             <div class="justify-content-center align-items-center text-center">
-                <a href="#" class="btn btn-success" tabindex="-1" role="button">Study Guide</a>
+                <a href="https://mega.nz/file/XmwSESbT#08NCh2k91KO-jhTdGyaUO_ED5bfrwsElNYO6inc1SDQ" target="_blank" class="btn btn-success" tabindex="-1" role="button">Download Study Guide</a>
                 </div>
         </div>
       </section>
