--- a/mini-proj1/ltj.html
+++ b/mini-proj1/ltj.html
@@ -87,7 +87,7 @@
                 <p class="lead">Look to Jesus describes the beauty, completeness, and availability of salvation in Jesus Christ, for all who sincerely seek Him. After understanding each sinner’s personal need for salvation (based on violation of God’s Law), the student is presented with the gospel of salvation in Christ. He then is encouraged to over­come some of the common misunderstandings associated with the true gospel message: that Jesus is somehow too high above him and therefore unavailable, and that he is somehow not qualified for forgive­ness because of his sin. The course is self contained in one 48 page booklet, with four chapters of reading material, each followed by study questions. The reader answers “Response” questions from the text, as well as “Making It Personal” questions from their own viewpoints and experience.</p>
             </div>
             <div class="justify-content-center align-items-center text-center">
-                <a href="#" class="btn btn-success" tabindex="-1" role="button">Study Guide</a>
+                <a href="https://mega.nz/file/nzZH2CzT#bNYtirvQ9o1j2UOwdHHpF3c3IuKr_z1PUt-2i8RodhY" target="_blank" class="btn btn-success" tabindex="-1" role="button">Download Study Guide</a>
                 </div>
         </div>
       </section>
