--- a/mini-proj1/self-study-downloads.html
+++ b/mini-proj1/self-study-downloads.html
@@ -82,7 +82,7 @@
         </figure>
 
         <div class="ms-3">
-          <p class="lead">Download courses for independent study.</p>
+          <p class="lead alert alert-success display-6">Download courses for independent study.</p>
         </div>
         </div>
 
