--- a/mini-proj1/wbc.html
+++ b/mini-proj1/wbc.html
@@ -87,7 +87,7 @@
                 <p class="lead">Here is a pointed and extremely helpful inquiry into the true state of the soul. The author asks: <em>"According to the Scriptures, when does a man, woman, boy, or girl have the right to the name Christian? One must not make the assumption lightly that he or she is a true Christian. A false conclusion at this point is tragic and fatal. Therefore I want to set before you four strands of the Bible’s answer to the question: What is a Biblical Christian?"</em></p>
             </div>
             <div class="justify-content-center align-items-center text-center">
-                <a href="#" class="btn btn-success" tabindex="-1" role="button">Study Guide</a>
+                <a href="https://mega.nz/file/GixT3TQK#ZVY1DAWphGlnbB5TG2FRYzOFWba4Ll9VJN3XhVbIYnY" target="_blank" class="btn btn-success" tabindex="-1" role="button">Download Study Guide</a>
                 </div>
         </div>
       </section>
