--- a/mini-proj1/home.html
+++ b/mini-proj1/home.html
@@ -151,40 +151,44 @@
     </div>
   </section>
 
-  <section class="container">
-    <div class="d-flex justify-content-center align-items-center">
+  <section class="container pb-5">
+    <div>
       <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
+        <div class="carousel-inner justify-content-center align-items-center text-center">
           <div class="carousel-item active">
-            <img src="https://images.unsplash.com/photo-1529070538774-1843cb3265df?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" class="md-block w-100" alt="...">
+            <img src="https://images.unsplash.com/photo-1529070538774-1843cb3265df?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" class="md-block" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="https://images.unsplash.com/photo-1602601564993-8724b0b613b5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" class="md-block w-100" alt="...">
+            <img src="https://images.unsplash.com/photo-1602601564993-8724b0b613b5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" class="md-block" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="https://images.unsplash.com/photo-1519915734606-32d972e3b9b7?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" class="md-block w-100" alt="...">
+            <img src="https://images.unsplash.com/photo-1519915734606-32d972e3b9b7?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" class="md-block" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="https://images.unsplash.com/photo-1488521787991-ed7bbaae773c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" class="md-block w-100" alt="...">
+            <img src="https://images.unsplash.com/photo-1488521787991-ed7bbaae773c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" class="md-block" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="https://images.unsplash.com/photo-1542810634-71277d95dcbb?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" class="md-block w-100" alt="...">
+            <img src="https://images.unsplash.com/photo-1542810634-71277d95dcbb?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" class="md-block" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="https://images.unsplash.com/photo-1480388198291-d071e45ee9ca?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" class="md-block w-100" alt="...">
+            <img src="https://images.unsplash.com/photo-1480388198291-d071e45ee9ca?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" class="md-block" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="https://images.unsplash.com/photo-1491439996916-067ed99cba60?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" class="md-block w-100" alt="...">
+            <img src="https://images.unsplash.com/photo-1491439996916-067ed99cba60?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" class="md-block" alt="...">
           </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+        <div class="text-center pt-3">
+          <a href="./about.html" class="btn btn-success btn-lg" tabindex="-1" role="button" aria-disabled="true"> See Our Mission</a>
+        </div>
+        
+        <!-- <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Previous</span>
         </button>
         <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
-        </button>
+        </button> -->
       </div>
     </div>
   </section>
@@ -204,7 +208,7 @@
         <a class="btn btn-outline-success btn-floating m-1" href="https://www.linkedin.com/" target="_blank" role="button">
           <i class="fab fa-linkedin-in"></i></a>
 
-        <a class="btn btn-outline-success btn-floating m-1" href="https://github.com/" target="_blank" role="button">
+        <a class="btn btn-outline-success btn-floating m-1" href="https://github.com/codenimus/" target="_blank" role="button">
           <i class="fab fa-github"></i></a>
       </section>
   
