--- a/mini-proj1/iwg.html
+++ b/mini-proj1/iwg.html
@@ -88,7 +88,7 @@
                 </p>
             </div>
             <div class="justify-content-center align-items-center text-center">
-                <a href="#" class="btn btn-success" tabindex="-1" role="button">Study Guide</a>
+                <a href="https://mega.nz/file/3zAkWYQZ#JwQ8p-oIlRJQJfjn2xp90-S9Jl5DGu3l-PfGyy7bUs8" target="_blank" class="btn btn-success" tabindex="-1" role="button">Download Study Guide</a>
                 </div>
         </div>
       </section>
