--- a/mini-proj1/donate.html
+++ b/mini-proj1/donate.html
@@ -436,7 +436,7 @@
 
               <h6 class="alert alert-success text-center">Donate with Paypal</h6>
                 <p>
-                  <button type="button" class="btn btn-success rounded-pill"><i class="fa fa-paypal mr-2"></i> Log into my Paypal</button>
+                  <a href="https://www.paypal.com/ph/signin" target="_blank"><button type="button" class="btn btn-success rounded-pill"><i class="fa fa-paypal mr-2"></i> Log into my Paypal</button></a>
                 </p>
                 <p class="text-muted text-center">Your personal data will be used to process your donations, support your experience throughout this website, and for other purposes described in our <a href="./privacy-policy.html" target="_blank" class="text-success">privacy policy</a>.
                 </p>
