minor edits in footer

--- a/mini-proj1/home.html
+++ b/mini-proj1/home.html
@@ -301,8 +301,8 @@
     </div>
 
     <div class="text-center p-2" style="background-color: rgba(0, 0, 0, 0.2);">
-      © 2022 Copyright:
-      <p class="text-dark"><b>SemperRadicata.org</b></p>
+      © 2022 MiniProj-1 for KodeGo by:
+      <p class="text-dark"><b>Dhel Atienza</b></p>
     </div>
   </footer>
 
