--- a/mini-proj1/self-study-downloads.html
+++ b/mini-proj1/self-study-downloads.html
@@ -223,8 +223,8 @@
           </section>
         </div>
         <div class="text-center p-2" style="background-color: rgba(0, 0, 0, 0.2);">
-          © 2022 Copyright:
-          <p class="text-dark"><b>SemperRadicata.org</b></p>
+            © 2022 MiniProj-1 for KodeGo by:
+          <p class="text-dark"><b>Dhel Atienza</b></p>
         </div>
       </footer>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
