--- a/mini-proj1/donate.html
+++ b/mini-proj1/donate.html
@@ -398,6 +398,7 @@
                       <i class="fa fa-cc-visa mx-1"></i>
                       <i class="fa fa-cc-mastercard mx-1"></i>
                       <i class="fa fa-cc-amex mx-1"></i>
+                      <i class="fas fa-lock ms-2 me-1"></i><span>SSL Secure</span>
                     </span>
                   </div>
                 </div>
