--- a/mini-proj1/dre.html
+++ b/mini-proj1/dre.html
@@ -72,7 +72,7 @@
         </nav>
       </header>
 
-      <section class="container mt-5 p-5 bg-warning bg-opacity-25">
+      <section class="container my-5 p-5 bg-warning bg-opacity-25">
         <h1>Decisional Regeneration</h1>
             <figure>
                 <figcaption class="blockquote-footer pt-2">
