paddings and margins

--- a/mini-proj1/self-study-downloads.html
+++ b/mini-proj1/self-study-downloads.html
@@ -86,33 +86,33 @@
         </div>
         </div>
 
-        <div class="row justify-content-center align-items-center text-center g-4">
-          <div class="col py-4">
+        <div class="row justify-content-center align-items-center text-center g-2">
+          <div class="col pt-3 my-3 bg-warning bg-opacity-25">
             <a href="./wbc.html"><img src="https://www.chapellibrary.org/images/covers/courses/wbc.jpg?width=250" alt="What is Biblical Christianity?"></a>
-            <p class="fst-italic">Read more about the course <a href="./wbc.html" class="text-success fw-bold">HERE</a></p>
+            <p class="fst-italic pt-4">Read more about the course <a href="./wbc.html" class="text-success fw-bold">HERE</a></p>
           </div>
-          <div class="col py-4">
+          <div class="col pt-3 my-3 bg-warning bg-opacity-25">
             <a href="./for.html"><img src="https://www.chapellibrary.org/images/covers/courses/for.jpg?width=250" alt="Forgiveness"></a>
-            <p class="fst-italic">Read more about the course <a href="./for.html" class="text-success fw-bold">HERE</a></p>
+            <p class="fst-italic pt-4">Read more about the course <a href="./for.html" class="text-success fw-bold">HERE</a></p>
           </div>
-          <div class="col py-4">
+          <div class="col pt-3 my-3 bg-warning bg-opacity-25">
             <a href="./ltj.html"><img src="https://www.chapellibrary.org/images/covers/courses/ltj.jpg?width=250" alt="Look to Jesus"></a>
-            <p class="fst-italic">Read more about the course <a href="./ltj.html" class="text-success fw-bold">HERE</a></p>
+            <p class="fst-italic pt-4">Read more about the course <a href="./ltj.html" class="text-success fw-bold">HERE</a></p>
           </div>
         </div>
 
-        <div class="row justify-content-center align-items-center text-center g-4">
-          <div class="col py-4">
+        <div class="row justify-content-center align-items-center text-center g-2">
+          <div class="col pt-3 my-3 bg-warning bg-opacity-25">
             <a href="./dre.html"><img src="https://www.chapellibrary.org/images/covers/courses/dre.jpg?width=250" alt="Decisional Regeneration"></a>
-            <p class="fst-italic">Read more about the course <a href="./dre.html" class="text-success fw-bold">HERE</a></p>
+            <p class="fst-italic pt-4">Read more about the course <a href="./dre.html" class="text-success fw-bold">HERE</a></p>
           </div>
-          <div class="col py-4">
+          <div class="col pt-3 my-3 bg-warning bg-opacity-25">
             <a href="./fot.html"><img src="https://www.chapellibrary.org/images/covers/courses/fot.jpg?width=250" alt="Forgiving Others"></a>
-            <p class="fst-italic">Read more about the course <a href="./fot.html" class="text-success fw-bold">HERE</a></p>
+            <p class="fst-italic pt-4">Read more about the course <a href="./fot.html" class="text-success fw-bold">HERE</a></p>
           </div>
-          <div class="col py-4">
+          <div class="col pt-3 my-3 bg-warning bg-opacity-25">
             <a href="./iwg.html"><img src="https://www.chapellibrary.org/images/covers/courses/iwg.jpg?width=250" alt="Infallible Word of God"></a>
-            <p class="fst-italic">Read more about the course <a href="./iwg.html" class="text-success fw-bold">HERE</a></p>
+            <p class="fst-italic pt-4">Read more about the course <a href="./iwg.html" class="text-success fw-bold">HERE</a></p>
           </div>
         </div>
       </section>
