edited some spacing

--- a/mini-proj1/self-study-downloads.html
+++ b/mini-proj1/self-study-downloads.html
@@ -83,7 +83,7 @@
           <p class="lead alert alert-success display-6">Download courses for independent study.</p>
         </div>
 
-        <div class="row justify-content-center align-items-center text-center g-2">
+        <div class="row justify-content-center align-items-center text-center g-2 pt-2">
           <div class="col pt-3 my-3 bg-warning bg-opacity-25">
             <a href="./wbc.html"><img src="https://www.chapellibrary.org/images/covers/courses/wbc.jpg?width=250" alt="What is Biblical Christianity?"></a>
             <p class="fst-italic pt-4">Read more about the course <a href="./wbc.html" class="text-success fw-bold">HERE</a></p>
@@ -98,7 +98,7 @@
           </div>
         </div>
 
-        <div class="row justify-content-center align-items-center text-center g-2">
+        <div class="row justify-content-center align-items-center text-center g-2 pt-2">
           <div class="col pt-3 my-3 bg-warning bg-opacity-25">
             <a href="./dre.html"><img src="https://www.chapellibrary.org/images/covers/courses/dre.jpg?width=250" alt="Decisional Regeneration"></a>
             <p class="fst-italic pt-4">Read more about the course <a href="./dre.html" class="text-success fw-bold">HERE</a></p>
