--- a/mini-proj1/donate.html
+++ b/mini-proj1/donate.html
@@ -370,18 +370,22 @@
           </div>
           <h6 class="alert alert-success text-center">Would you like to susbscribe to our newsletter?</h6>
           <div class="row">
-          <div class="col form-check">
+            <div class="col">
+          <div class="form-check">
             <input class="form-check-input" type="radio" name="emailSubRadio" id="emailRadioSub1">
             <label class="form-check-label" for="emailRadioSub1">
               <i class="fas fa-heart text-success"></i> Yes
             </label>
           </div>
-          <div class="col form-check">
+            </div>
+            <div class="col">
+          <div class="form-check">
             <input class="form-check-input" type="radio" name="emailSubRadio" id="emailRadioNoSub">
             <label class="form-check-label" for="emailRadioNoSub">
               <i class="fas fa-times text-success"></i> No
             </label>
           </div>
+            </div>
           </div>
 
             <h6 class="alert alert-success text-center">Donate with Credit/Debit Card</h6>
@@ -390,7 +394,7 @@
                 <input type="text" name="username" placeholder="Juan D. Cruz" required class="form-control">
               </div>
               <div class="form-group">
-                <label for="cardNumber">Card number</label>
+                <label for="cardNumber">Card number</label> <i class="fas fa-lock ms-2 me-1 text-muted text-end"></i><span>SSL Secure</span>
                 <div class="input-group">
                   <input type="text" name="cardNumber" placeholder="Your card number" class="form-control" required>
                   <div class="input-group-append">
@@ -398,7 +402,6 @@
                       <i class="fa fa-cc-visa mx-1"></i>
                       <i class="fa fa-cc-mastercard mx-1"></i>
                       <i class="fa fa-cc-amex mx-1"></i>
-                      <i class="fas fa-lock ms-2 me-1"></i><span>SSL Secure</span>
                     </span>
                   </div>
                 </div>
