--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <li>CSS Exercise 4-<a href="https://codenimus.github.io/kodego-demo/mobile">Flexbox and Responsive Design</a></li>
             </ul>
             <ul>
-                <li>6 JS Activities-<a href="">Start With <code><mark>for</mark></code> Loop</a> </li>
+                <li>6 JS Activities-<a href="https://codenimus.github.io/kodego-demo/js-activities/grocery_items.html">Start With <code><mark>for</mark></code> Loop</a> </li>
             </ul>
             <ul>
                 <li>Mini Project 1-<a href="https://codenimus.github.io/kodego-demo/mini-proj1/home.html" target="_blank">Reformed Christian Website</a></li>
