--- a/js-activities/temp_convereter.html
+++ b/js-activities/temp_convereter.html
@@ -52,23 +52,23 @@
     <div class="m-1 p-1">
         <div class="row mx-2 px-2">
             <div class="col-lg-6">
-                <h3 class="alert alert-success text-muted text-center">Convert Temperature from F&#176 to C&#176</h3>
+                <h3 class="alert alert-success text-muted text-center">Convert Temperature from &#176F to &#176C</h3>
                 <div class="input-group bg-danger bg-opacity-10 shadow-lg p-3 mb-5 rounded">
                     <div>
                     <input type="number" id="inputFahrenheit" class="form-control fst-italic" placeholder="Fahrenheit" aria-label="Fahrenheit" oninput="tempConvert(this.value)">
                     </div>
                     <div class="ms-2">
-                    Celsius: <span id="outputCelsius" class="fst-italic"></span>
+                    <span id="outputCelsius" class="fst-italic">to Celsius</span>
                     </div>
                 </div>
                    
-                <h3 class="alert alert-success text-muted text-center">Convert Temperature from C&#176 to F&#176</h3>
+                <h3 class="alert alert-success text-muted text-center">Convert Temperature from &#176C to &#176F</h3>
                 <div class="input-group bg-danger bg-opacity-10 shadow-lg p-3 mb-5 rounded">
                     <div>
                     <input type="number" id="inputCelsius" class="form-control fst-italic" placeholder="Celsius" aria-label="Celsius" oninput="tempConvert2(this.value)">
                     </div>
                     <div class="ms-2">
-                    Fahrenheit: <span id="outputFahrenheit" class="fst-italic"></span>
+                    <span id="outputFahrenheit" class="fst-italic">to Fahrenheit</span>
                     </div>
                 </div>
             </div>
@@ -76,17 +76,17 @@
                 <h3 class="alert alert-danger text-muted text-center">Solution</h3>
                 <code>
                 <pre class="bg-success bg-opacity-10 p-3">
-        // F&#176 to C&#176
-        function tempConvert(valNum) {
-            valNum = parseFloat(valNum);
-            document.getElementById("outputCelsius").innerHTML = (valNum-32) / 1.8;
-            }
+// F&#176 to C&#176
+function tempConvert(valNum) {
+    valNum = parseFloat(valNum);
+    document.getElementById("outputCelsius").innerHTML = (valNum - 32) / 1.8 + "&#176C";
+    }
                                 
-        // C&#176 to F&#176
-            function tempConvert2(valNum) {
-            valNum = parseFloat(valNum);
-            document.getElementById("outputFahrenheit").innerHTML = (valNum*1.8) + 32;
-            }
+// C&#176 to F&#176
+    function tempConvert2(valNum) {
+    valNum = parseFloat(valNum);
+    document.getElementById("outputFahrenheit").innerHTML = (valNum * 1.8) + 32 + "&#176F";
+    }
                 </pre>
                 </code>
             </div>
